Added extra tab with project info

--- a/manifest.json
+++ b/manifest.json
@@ -22,6 +22,8 @@
   "permissions": [
     "contextMenus",
     "activeTab",
+    "tabs",
+    "storage",
     "https://api.coingecko.com/api/v3/coins/ethereum/contract/"
   ],
   "content_scripts": [
